2013-11-16  Alan Modra  <amodra@gmail.com>

	* NEWS: Mention powerpc64le support and bugs fixed.
	* README: Both big-endian and little-endian powerpc64 supported.

2013-11-16  Alan Modra  <amodra@gmail.com>

	* libc-abis: PowerPC64le has ifunc too.

2013-11-16  Alan Modra  <amodra@gmail.com>

	* sysdeps/unix/sysv/linux/powerpc/configure.in (arch_minimum_kernel):
	Set for powerpc*le.
	* sysdeps/unix/sysv/linux/powerpc/configure: Regenerate.

2013-11-16  Alan Modra  <amodra@gmail.com>

	[BZ #5268]
	* include/gmp.h (__mpn_extract_double, __mpn_extract_long_double):
	Update prototypes.
	* stdio-common/printf_fp.c: Likewise.
	(__printf_fp): Use returned zero_bits.
	* stdlib/dbl2mpn.c (__mpn_extract_double): Update funtion arguments.
	* sysdeps/i386/ldbl2mpn.c (__mpn_extract_long_double): Don't perform
	shifts for denormals here.  Instead return leading zero bit count
	and adjust return value of function.
	* sysdeps/ieee754/dbl-64/dbl2mpn.c (__mpn_extract_long_double): Likewise.
	* sysdeps/ieee754/ldbl-128/ldbl2mpn.c (__mpn_extract_long_double):
	Likewise.
	* sysdeps/ieee754/ldbl-96/ldbl2mpn.c (__mpn_extract_long_double):
	Likewise.
	* sysdeps/ieee754/ldbl-128ibm/ldbl2mpn.c (__mpn_extract_long_double):
	Likewise.  Return an extra 11 bits of precision.

2013-11-16  Alan Modra  <amodra@gmail.com>

	* Makerules (abilist): Define and use var in abilist rules.
	* sysdeps/unix/sysv/linux/powerpc/Makefile (abilist): Define.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/ld-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libBrokenLocale-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libanl-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libc-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libcrypt-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libdl-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libm-le.abilist,
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libnsl-le.abilist,