@@ -10,7 +10,7 @@ Version 2.18.1
 * The following bugs are resolved with this release:
 
   14155, 14547, 14699, 15532, 15427, 15522, 15680, 15723, 15734, 15735,
-  15797, 15892, 15895, 15909, 15917, 15996, 16072, 16150.
+  15797, 15892, 15895, 15909, 15917, 15996, 16072, 16150, 16430.
 
 * Support for powerpc64le has been added.
 
